--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HarmittonCHAT</title>
+    <title>CHAT</title>
     <style>
         * {
             box-sizing: border-box;
@@ -31,8 +31,8 @@
         }
 
         #messages>li:nth-child(odd) {
-            background-color: #141212;
-        }
+            background-color:floralwhite;
+                }
 
         #chat {
             border: 1px solid;
@@ -83,7 +83,7 @@
             <button id="button" type="submit">Enviar</button>
         </form>
     </section>
-    <h1>HarmittonCHAT</h1>
+    <h1>CHAT</h1>
 
     <script src="/socket.io/socket.io.js"></script>
     <script>
@@ -93,7 +93,14 @@
         const input = document.getElementById('input');
         const messages = document.getElementById('messages');
 
-        socket.on('chat message', (msg) => {
+        var nick = prompt('What is your desired username?');
+        socket.emit('newuser', nick);
+            
+            // Regular forum submission event handler below this.
+            
+
+        socket.on('message', (msg) => {
+            e.preventDefault();
             const item = `<li>${msg}</li>`;
             messages.insertAdjacentHTML('beforeend', item);
         });
@@ -104,7 +111,7 @@
             if (input.value) {
                 const item = `<li>You: ${input.value}</li>`;
                 messages.insertAdjacentHTML('beforeend', item);
-                socket.emit('chat message', input.value);
+                socket.emit('message', input.value);
                 input.value = '';
             }
         });
