home+products+chat+router+css

--- a/public/chat.html
+++ b/public/chat.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CHAT</title>
+    <title>Chat Bot</title>
     <style>
         * {
             box-sizing: border-box;
@@ -83,7 +83,7 @@
             <button id="button" type="submit">Enviar</button>
         </form>
     </section>
-    <h1>CHAT</h1>
+    <h1>Chat Bot</h1>
 
     <script src="/socket.io/socket.io.js"></script>
     <script>
