--- a/public/home.html
+++ b/public/home.html
@@ -23,9 +23,9 @@
                 <nav>
                     <ul>
                         <li><a href="">Home</a></li>
-                        <li><a href="/chat">Products</a></li>
+                        <li><a href="/products">Products</a></li>
                         <li><a href="">About</a></li>
-                        <li><a href="">Contact</a></li>
+                        <li><a href="/chat">Contact</a></li>
                         <li><a href="">Account</a></li>
                     </ul>
                 </nav>
