--- a/public/home.html
+++ b/public/home.html
@@ -4,13 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="data:,">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="./css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.2/css/fontawesome.min.css">
-    <title>RedStore | Ecommerce Website Desing</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha384-GLhlTQ8iKt99UqNlSpnEGFLt12PWQr0NTOFN/FVEBRjUnIISZsODetFfnYd+qL2" crossorigin="anonymous">
+        <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+        <title>RedStore | Ecommerce Website Desing</title>
 </head>
 
 <body>
@@ -21,15 +25,16 @@
                     <img src="../images/logo.png" width="125px" alt="">
                 </div>
                 <nav>
-                    <ul>
+                    <ul id="MenuItems">
                         <li><a href="">Home</a></li>
                         <li><a href="/products">Products</a></li>
                         <li><a href="">About</a></li>
                         <li><a href="/chat">Contact</a></li>
-                        <li><a href="">Account</a></li>
+                        <li><a href="/log-in">Account</a></li>
                     </ul>
                 </nav>
                 <img src="../images/cart.png" width="30px" height="30px" alt="">
+                <img src="../images/menu.png" class="menu-icon" onclick="menutoggle()">
             </div>
 
             <div class="row">
@@ -71,7 +76,7 @@
         <div class="row">
             <div class="col-4">
                 <img src="../images/product-1.jpg">
-                <h2 class="title">Red Printed T-shirt</h2>
+                <h4 class="title">Red Printed T-shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
@@ -95,7 +100,7 @@
             </div>
             <div class="col-4">
                 <img src="../images/product-3.jpg">
-                <h4 class="title">Red Printed T-shirt</h4>
+                <h4 class="title">Men's Gray Jogging Pantst</h4>
                 <div class="rating">
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
@@ -107,7 +112,7 @@
             </div>
             <div class="col-4">
                 <img src="../images/product-4.jpg">
-                <h4 class="title">Red Printed T-shirt</h4>
+                <h4 class="title">Blue Printed T-shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
@@ -122,7 +127,7 @@
         <div class="row">
             <div class="col-4">
                 <img src="../images/product-5.jpg">
-                <h2 class="title">Red Printed T-shirt</h2>
+                <h4 class="title">Classic Gray Sneakers</h4>
                 <div class="rating">
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
@@ -134,7 +139,7 @@
             </div>
             <div class="col-4">
                 <img src="../images/product-6.jpg">
-                <h4 class="title">Black Shoes</h4>
+                <h4 class="title">Black Sports T-shirts</h4>
                 <div class="rating">
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
@@ -146,7 +151,7 @@
             </div>
             <div class="col-4">
                 <img src="../images/product-7.jpg">
-                <h4 class="title">Red Printed T-shirt</h4>
+                <h4 class="title">Multicolor Sports Tightst</h4>
                 <div class="rating">
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
@@ -158,7 +163,7 @@
             </div>
             <div class="col-4">
                 <img src="../images/product-8.jpg">
-                <h4 class="title">Red Printed T-shirt</h4>
+                <h4 class="title">Black Fossil Watch</h4>
                 <div class="rating">
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
@@ -172,7 +177,7 @@
         <div class="row">
             <div class="col-4">
                 <img src="../images/product-9.jpg">
-                <h2 class="title">Red Printed T-shirt</h2>
+                <h4 class="title">RoadSter Black Watch</h4>
                 <div class="rating">
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
@@ -184,7 +189,7 @@
             </div>
             <div class="col-4">
                 <img src="../images/product-10.jpg">
-                <h2 class="title">Black Shoes</h2>
+                <h4 class="title">Black Sports Sneakers</h4>
                 <div class="rating">
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
@@ -196,7 +201,7 @@
             </div>
             <div class="col-4">
                 <img src="../images/product-11.jpg">
-                <h2 class="title">Red Printed T-shirt</h2>
+                <h4 class="title">Gray Shoes</h4>
                 <div class="rating">
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
@@ -208,7 +213,7 @@
             </div>
             <div class="col-4">
                 <img src="../images/product-12.jpg">
-                <h2 class="title">Red Printed T-shirt</h2>
+                <h4 class="title">Men's Black Jogging Pantst</h4>
                 <div class="rating">
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
@@ -238,7 +243,7 @@
                         adjustable brightness, so everything is clear as can
                         be.
                     </small>
-                    <a href="" class="btn">Buy Now&#8594;</a>
+                    <a href="" class="btn">Buy Now &#8594;</a>
                 </div>
             </div>
         </div>
@@ -359,9 +364,24 @@
                     </ul>
                 </div>
             </div>
+            <hr>
+            <p class="fa-copyright">Coypright 2023</p>
         </div>
     </div>
-
+    <!-----Menu Toggle----->
+    <script>
+        var MenuItems = document.getElementById("MenuItems");
+    
+        MenuItems.style.maxHeight = "0px";
+    
+        function menutoggle() {
+            if (MenuItems.style.maxHeight === "0px") {
+                MenuItems.style.maxHeight = "200px";
+            } else {
+                MenuItems.style.maxHeight = "0px";
+            }
+        }
+    </script>
 </body>
 
 </html>
