--- a/public/home.html
+++ b/public/home.html
@@ -26,11 +26,11 @@
                 </div>
                 <nav>
                     <ul id="MenuItems">
-                        <li><a href="">Home</a></li>
+                        <li><a href="/home">Home</a></li>
                         <li><a href="/products">Products</a></li>
                         <li><a href="">About</a></li>
                         <li><a href="/chat">Contact</a></li>
-                        <li><a href="/log-in">Account</a></li>
+                        <li><a href="/login">Account</a></li>
                     </ul>
                 </nav>
                 <img src="../images/cart.png" width="30px" height="30px" alt="">
