--- a/public/product.html
+++ b/public/product.html
@@ -1,11 +1,147 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.2/css/fontawesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+        integrity="sha384-GLhlTQ8iKt99UqNlSpnEGFLt12PWQr0NTOFN/FVEBRjUnIISZsODetFfnYd+qL2" crossorigin="anonymous">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <title>RedStore | Ecommerce Website Desing</title>
 </head>
+
 <body>
-    
+    <div class="small-container">
+        <h2>Featured Products</h2>
+        <div class="row">
+            <!-- Product Card 1 -->
+            <div class="col-4">
+                <div class="card">
+                    <img src="../images/product-1.jpg" alt="Product Image">
+                    <h4 class="title">Red Printed T-shirt</h4>
+                    <p class="price">$50.00</p>
+                    <p>Details about the product go here.</p>
+                    <button>Add to Cart</button>
+                </div>
+            </div>
+
+            <!-- Product Card 2 -->
+            <div class="col-4">
+                <div class="card">
+                    <img src="../images/product-2.jpg" alt="Product Image">
+                    <h4 class="title">Black Shoes</h4>
+                    <p class="price">$50.00</p>
+                    <p>Details about the product go here.</p>
+                    <button>Add to Cart</button>
+                </div>
+            </div>
+
+            <div class="col-4">
+                <div class="card">
+                    <img src="../images/product-3.jpg" alt="Product Image">
+                    <h4 class="title">Black Shoes</h4>
+                    <p class="price">$50.00</p>
+                    <p>Details about the product go here.</p>
+                    <button>Add to Cart</button>
+                </div>
+            </div>
+
+            <div class="col-4">
+                <div class="card">
+                    <img src="../images/product-4.jpg" alt="Product Image">
+                    <h4 class="title">Black Shoes</h4>
+                    <p class="price">$50.00</p>
+                    <p>Details about the product go here.</p>
+                    <button>Add to Cart</button>
+                </div>
+            </div>
+            
+            <div class="col-4">
+                <div class="card">
+                    <img src="../images/product-5.jpg" alt="Product Image">
+                    <h4 class="title">Black Shoes</h4>
+                    <p class="price">$50.00</p>
+                    <p>Details about the product go here.</p>
+                    <button>Add to Cart</button>
+                </div>
+            </div>
+
+            <div class="col-4">
+                <div class="card">
+                    <img src="../images/product-6.jpg" alt="Product Image">
+                    <h4 class="title">Black Shoes</h4>
+                    <p class="price">$50.00</p>
+                    <p>Details about the product go here.</p>
+                    <button>Add to Cart</button>
+                </div>
+            </div>
+
+            <div class="col-4">
+                <div class="card">
+                    <img src="../images/product-7.jpg" alt="Product Image">
+                    <h4 class="title">Black Shoes</h4>
+                    <p class="price">$50.00</p>
+                    <p>Details about the product go here.</p>
+                    <button>Add to Cart</button>
+                </div>
+            </div>
+
+            <div class="col-4">
+                <div class="card">
+                    <img src="../images/product-8.jpg" alt="Product Image">
+                    <h4 class="title">Black Shoes</h4>
+                    <p class="price">$50.00</p>
+                    <p>Details about the product go here.</p>
+                    <button>Add to Cart</button>
+                </div>
+            </div>
+
+            <div class="col-4">
+                <div class="card">
+                    <img src="../images/product-9.jpg" alt="Product Image">
+                    <h4 class="title">Black Shoes</h4>
+                    <p class="price">$50.00</p>
+                    <p>Details about the product go here.</p>
+                    <button>Add to Cart</button>
+                </div>
+            </div>
+
+
+            <div class="col-4">
+                <div class="card">
+                    <img src="../images/product-10.jpg" alt="Product Image">
+                    <h4 class="title">Black Shoes</h4>
+                    <p class="price">$50.00</p>
+                    <p>Details about the product go here.</p>
+                    <button>Add to Cart</button>
+                </div>
+            </div>
+
+            <div class="col-4">
+                <div class="card">
+                    <img src="../images/product-11.jpg" alt="Product Image">
+                    <h4 class="title">Black Shoes</h4>
+                    <p class="price">$50.00</p>
+                    <p>Details about the product go here.</p>
+                    <button>Add to Cart</button>
+                </div>
+            </div>
+
+            <div class="col-4">
+                <div class="card">
+                    <img src="../images/product-12.jpg" alt="Product Image">
+                    <h4 class="title">Black Shoes</h4>
+                    <p class="price">$50.00</p>
+                    <p>Details about the product go here.</p>
+                    <button>Add to Cart</button>
+                </div>
+            </div>
+
+        </div>
+    </div>
 </body>
+
 </html>
