--- a/public/log-in.html
+++ b/public/log-in.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <title>Log in | Red Store</title>
     <style>
@@ -109,12 +110,12 @@
 <body>
     <section>
         <div class="LoginForm">
-            <form id="loginForm" action="/login">
+            <form id="loginForm" action="/login" method="post">
                 <h2>Log In</h2>
                 <div class="input-container">
                     <i class="fa-solid fa-envelope"></i>
-                    <input type="email" id="email" name="email" required>
-                    <label for="email">Email</label>
+                    <input type="username" id="username" name="username" required>
+                    <label for="email">Email or Username</label>
                 </div>
 
                 <div class="input-container">
